# game-of-life-cuda

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: GameOfLife.hpp  GameOfLifeDefault.hpp  GameOfLifeThrust.hpp
src/: CMakeLists.txt  GameOfLife.cpp  GameOfLifeDefault.cpp  GameOfLifeThrust.cu  main.cu
test/: CMakeLists.txt  GameOfLifeTest.cu
